file(GLOB PYTHONMODULES *.py)
file(GLOB PYTHONMODULES_M __urbansim/*)
# Installation of the program

INSTALL(FILES ${PYTHONMODULES}
        DESTINATION "lib/DynaMind/scripts"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(FILES ${PYTHONMODULES_M}
        DESTINATION "lib/DynaMind/scripts/__urbansim/"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
