file(GLOB PYTHONMODULES *.py)
file(GLOB PYTHONMODULES_M UrbanSim/*)
# Installation of the program

INSTALL(FILES ${PYTHONMODULES}
        DESTINATION "lib/DynaMind/scripts"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(FILES ${PYTHONMODULES_M}
        DESTINATION "lib/DynaMind/scripts/UrbanSim/"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
