file(GLOB URBANSIM_CPPS *.cpp)


add_library(dynamind-urbansim SHARED ${URBANSIM_CPPS})
target_link_libraries(dynamind-urbansim  ${DYNAMIND_TOOLBOX_LIBRARY}  ${DYNAMIND_CORE_LIBRARY} ${QT_LIBRARIES})

INSTALL(TARGETS dynamind-urbansim
        DESTINATION "lib/DynaMind"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

